tests/Core/negative/test005.jvc
-- no matching case branch

constr cons 2;

case cons 1 2 of {
  nil -> true
}
